# gentropy-plots

./: .gitignore  pyproject.toml
src/gentropy_plots/: manhattan_plot.py
