[tool.poetry]
name = "gentropy-plots"
version = "0.0.0"
description = "A collection of plotting tools based on gentropy data objects"
authors = ["Daniel Suveges <daniel.suveges@protonmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gentropy_plots", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
gentropy = "^1.2.0"
plotly = "^5.21.0"
nbformat = "^5.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"
mypy = "^1.9.0"
interrogate = "^1.7.0"
darglint = "^1.8.1"
ruff = "^0.4.1"
ipython = "^8.23.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
